cmake_minimum_required(VERSION 3.10)
project(Cpp_learn)

set(CMAKE_CXX_STANDARD 11)

add_executable(exp11 exp_1_1.cpp)
add_executable(exp21 exp_2_1.cpp)
add_executable(exp22 exp_2_2.cpp)
add_executable(lab21 lab_2_1.cpp)
add_executable(lab22 lab_2_2.cpp)
add_executable(lab23 lab_2_3.cpp)
add_executable(exp31 exp_3_1.cpp)
add_executable(exp32 exp_3_2.cpp)
add_executable(lab31 lab_3_1.cpp)
add_executable(lab32 lab_3_2.cpp)
add_executable(lab33 lab_3_3.cpp)
add_executable(exp41 exp_4_1.cpp)

